small fixes in scrapeWebsite.ts

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beautiful Web Scraper Application</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='templates/styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='/templates/styles.css') }}">
   </head>
   <script src="https://cdn.tailwindcss.com"></script>
   <body class="flex min-h-screen items-center justify-center">
